2005-02-18 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpResponse.cs: send the calculated content length even when it's 0.
	Fixes bug #72655.

2005-02-04  Lluis Sanchez Gual <lluis@novell.com>

	* HttpContext.cs: Added internal property to keep a reference to
	the last accessed page. Page uses this to implement PreviousPage.

2005-02-02  Lluis Sanchez Gual <lluis@novell.com>

	* ProcessModelInfo.cs: Fixed warning.

2005-02-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TraceContext.cs: writing a message without any other argument is not
	a warniing. Fixes bug #72017.

2005-01-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplication.cs: if there are no more handlers, finish the
	request and ensure we call Complete on it. Now FreeTextBox 3.0 works.

2004-12-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequest.cs: honor the maxRequestSize limit from machine.config.

2004-12-15 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplication.cs: reread application CultureInfo as web.config
	might have changed. Fixes bug #62539.

2004-11-30 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpResponse.cs: fixed ApplyAppPathModifier to insert the session ID.

2004-11-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplicationFactory.cs: monitor changes in global.asax and bin
	directory and shutdown the application when that happens. Fixes bug
	#49651.

2004-11-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ReusableMemoryStream.cs: copied from System.IO.MemoryStream and
	slightly modified to allow expanding the buffer for cases on which the
	regular MemoryStream don't allow it.

	* HttpWriter.cs: use the new ReusableMemoryStream and fix bug #59841.
	Otherwise we would have to allocate a new MemoryStream...

2004-11-28 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplication.cs: Create() is now GetInstance().

2004-11-18 Lluis Sanchez Gual <lluis@novell.com>

	* SiteMapNodeCollection.cs: Added missing properties.